--- a/index.html
+++ b/index.html
@@ -11,34 +11,34 @@
 </head>
 <body>
   <h2>Here are the Canvas demos as below:</h2>
-  <p><a href="./airing_canvas/line.html">line</a></p>
-  <p><a href="./airing_canvas/rect.html">rect</a></p>
-  <p><a href="./airing_canvas/arc.html">arc</a></p>
-  <p><a href="./airing_canvas/arcTo.html">arcTo</a></p>
-  <p><a href="./airing_canvas/amazingRect.html">amazingRect</a></p>
-  <p><a href="./airing_canvas/2048_interface.html">2048_interface</a></p>
-  <p><a href="./airing_canvas/linearGradient.html">linearGradient</a></p>
-  <p><a href="./airing_canvas/radiaGradient.html">radiaGradient</a></p>
-  <p><a href="./airing_canvas/quadraticCurveTo.html">quadraticCurveTo</a></p>
-  <p><a href="./airing_canvas/createPattern.html">createPattern</a></p>
-  <p><a href="./airing_canvas/xp_background.html">xp_background</a></p>
-  <p><a href="./airing_canvas/translate.html">translate</a></p>
-  <p><a href="./airing_canvas/rotate.html">rotate</a></p>
-  <p><a href="./airing_canvas/rotate_2.html">rotate_2</a></p>
-  <p><a href="./airing_canvas/scale.html">scale</a></p>
-  <p><a href="./airing_canvas/transform.html">transform</a></p>
-  <p><a href="./airing_canvas/setTransform.html">setTransform</a></p>
-  <p><a href="./airing_canvas/font.html">font</a></p>
-  <p><a href="./airing_canvas/shadow.html">shadow</a></p>
-  <p><a href="./airing_canvas/textAlign.html">textAlign</a></p>
-  <p><a href="./airing_canvas/textBaseline.html">textBaseline</a></p>
-  <p><a href="./airing_canvas/measureText.html">measureText</a></p>
-  <p><a href="./airing_canvas/globalAlpha.html">globalAlpha</a></p>
-  <p><a href="./airing_canvas/globalCompositeOperation.html">globalCompositeOperation</a></p>
-  <p><a href="./airing_canvas/drawImage.html">drawImage</a></p>
-  <p><a href="./airing_canvas/clip.html">clip</a></p>
-  <p><a href="./airing_canvas/heart.html">heart</a></p>
-  <p><a href="./airing_canvas/ring.html">ring</a></p>
-  <p><a href="./airing_canvas/touchBuble.html">touchBuble</a></p>
+  <p><a href="./demos/line.html">line</a></p>
+  <p><a href="./demos/rect.html">rect</a></p>
+  <p><a href="./demos/arc.html">arc</a></p>
+  <p><a href="./demos/arcTo.html">arcTo</a></p>
+  <p><a href="./demos/amazingRect.html">amazingRect</a></p>
+  <p><a href="./demos/2048_interface.html">2048_interface</a></p>
+  <p><a href="./demos/linearGradient.html">linearGradient</a></p>
+  <p><a href="./demos/radiaGradient.html">radiaGradient</a></p>
+  <p><a href="./demos/quadraticCurveTo.html">quadraticCurveTo</a></p>
+  <p><a href="./demos/createPattern.html">createPattern</a></p>
+  <p><a href="./demos/xp_background.html">xp_background</a></p>
+  <p><a href="./demos/translate.html">translate</a></p>
+  <p><a href="./demos/rotate.html">rotate</a></p>
+  <p><a href="./demos/rotate_2.html">rotate_2</a></p>
+  <p><a href="./demos/scale.html">scale</a></p>
+  <p><a href="./demos/transform.html">transform</a></p>
+  <p><a href="./demos/setTransform.html">setTransform</a></p>
+  <p><a href="./demos/font.html">font</a></p>
+  <p><a href="./demos/shadow.html">shadow</a></p>
+  <p><a href="./demos/textAlign.html">textAlign</a></p>
+  <p><a href="./demos/textBaseline.html">textBaseline</a></p>
+  <p><a href="./demos/measureText.html">measureText</a></p>
+  <p><a href="./demos/globalAlpha.html">globalAlpha</a></p>
+  <p><a href="./demos/globalCompositeOperation.html">globalCompositeOperation</a></p>
+  <p><a href="./demos/drawImage.html">drawImage</a></p>
+  <p><a href="./demos/clip.html">clip</a></p>
+  <p><a href="./demos/heart.html">heart</a></p>
+  <p><a href="./demos/ring.html">ring</a></p>
+  <p><a href="./demos/touchBuble.html">touchBuble</a></p>
 </body>
 </html>
